[package]
name = "polythree"
version = "0.0.2"
description = "A binary ROM hack editor for 3rd gen games."
authors = ["Cicim", "DroidMiner67"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
poly3lib = { path = "../lib" }

# TODO Remove devtools
tauri = { version = "1.3", features = [
    "devtools",
    "dialog",
    "dialog-open",
    "dialog-save",
    "fs-write-file",
    "shell-open",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
byte-unit = { version = "4.0.19", default-features = false }
tiny_http = "0.12.0"
reqwest = { version = "0.11.20", features = ["blocking"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
